Fix long-build animation playing even if you can't place it
fix deleting gene not updating ui

fix duplicate gene type+level getting squashed from same key

--- a/src/game/ui/ingame/TileDetails.scss
+++ b/src/game/ui/ingame/TileDetails.scss
@@ -90,6 +90,11 @@
       width: 75px;
     }
   }
+
+  .info-cell-effects {
+    font-weight: bold;
+    margin-top: 5px;
+  }
 }
 
 .resource-icon {
